<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vue.SecondeFenetre">

    <TextView
        android:id="@+id/lblTitreAppli"
        android:layout_width="225dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/lblTitreAppli"
        android:textSize="30sp"
        app:fontFamily="cursive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblSaisirValeur"
        android:layout_width="278dp"
        android:layout_height="63dp"
        android:layout_marginBottom="268dp"
        android:text="@string/lblSaisirValeur"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:typeface="serif"
        app:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitreAppli" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="64dp"
        android:layout_marginBottom="172dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSaisirValeur">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="288dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name" />

        <Button
            android:id="@+id/btnValider"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Valider" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/taRes"
        android:textAllCaps="true"
        android:textColor="@color/design_default_color_primary"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:text="@tools:sample/date/hhmmss" />

</androidx.constraintlayout.widget.ConstraintLayout>