<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vue.MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_launcher_foreground"
                    android:orientation="vertical">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/rBtnHomme"
                            android:layout_width="match_parent"
                            android:layout_height="105dp"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/rBtnHomme" />

                        <RadioButton
                            android:id="@+id/rBtnFemme"
                            android:layout_width="match_parent"
                            android:layout_height="104dp"
                            android:layout_weight="1"
                            android:text="@string/rBtnFemme" />
                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ic_launcher_foreground"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="91dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblNom"
                            android:layout_width="78dp"
                            android:layout_height="97dp"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/lblNom" />

                        <EditText
                            android:id="@+id/edtNom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:gravity="center_horizontal"
                            android:inputType="textPersonName" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="77dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblPrenom"
                            style="@style/Prénom"
                            android:text="@string/lblPrenom"
                            tools:text="@string/lblPrenom" />

                        <EditText
                            android:id="@+id/edtPrenom"
                            android:layout_width="114dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:gravity="center_horizontal|center_vertical"
                            android:inputType="textPersonName" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="538dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnTraiter"
                android:layout_width="198dp"
                android:layout_height="87dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/btnTraiter"
                tools:text="@string/btnTraiter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/idPicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    tools:srcCompat="@tools:sample/avatars[0]" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/mlTxtRes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:text="@string/mltTxt" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>